--- a/test.tex
+++ b/test.tex
@@ -1,11 +1,10 @@
 \documentclass{amsart}
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 
 \title{Proof of the Riemann Hypothesis}
 \author{Anonymous}
-\date{January 2021}
+\date{June 2025}
 
 \newtheorem{theorem}{Theorem}
 \newcommand{\myemph}[1]{\textsl{#1}}
@@ -19,19 +18,17 @@ We prove the Riemann Hypothesis.
 \maketitle
 \tableofcontents
 
+\section{Introduction}
+\label{intro}
+
 \begin{quote}
 ``Man findet nun in der That etwa so viel reelle Wurzeln innerhalb dieser Grenzen, und es ist \myemph{sehr wahrscheinlich}, dass alle Wurzeln reell sind.
 Hiervon wäre allerdings ein strenger Beweis zu wünschen; ich habe indess die Aufsuchung desselben nach einigen flüchtigen vergeblichen Versuchen vorläufig bei Seite gelassen, da er für den nächsten Zweck meiner Untersuchung entbehrlich schien.'' \cite{Riemann}
 \end{quote}
 
-\section{Introduction}
-\label{intro}
-
 \begin{theorem}
-\label{mainresult}
-The Riemann Hypothesis is true: all nontrivial zeros of the Riemann zeta function~\(
-\zeta(s)
-\) have real part equal to~\(\frac{1}{2}\).
+\label{main}
+The Riemann Hypothesis is true: all nontrivial zeros of the Riemann zeta function~$\zeta(s)$ have real part equal to~$\frac{1}{2}$.
 \end{theorem}
 
 The proof is given in Section~\ref{proof}, and is inspired by Deligne's work~\cite{MR340258} and~\cite{MR601520}.
